# AI-Patient-Simulator

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/data/prompts/: diseases_list.py  prompt_details.py  system_prompts.py
backend/app/models/: user.py
backend/app/routers/: user.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  Config.js  index.js
frontend/src/components/: AudioPlayer.jsx  Chatbot.jsx  DoctorReport.jsx  Player.jsx  Recorder.jsx  Recorder1.jsx  SummaryReport.jsx  TextToAudio.jsx  Transcript.jsx  VoiceApp.jsx  VoiceRecorder.jsx
frontend/src/context/: WebSocketProvider.js
frontend/src/css/: Chatbot.css  Report.css  VoiceApp.css
frontend/src/hooks/: useWebSocket.js
